<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginLeft="3dp"
    android:layout_marginRight="3dp"
    tools:context=".ClassDetailActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        >
        <TextView
            android:id="@+id/tvDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details"
            android:textSize="16sp">
        </TextView>
    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#DCDCDC"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2" >

            <TextView
                android:id="@+id/days"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/day"
                android:textSize="16sp"
                >
            </TextView>

            <TextView
                android:id="@+id/code"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/code"
                android:textSize="16sp"
                >
            </TextView>
        </LinearLayout>

        <TextView
            android:id="@+id/time"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textSize="16sp">
        </TextView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        >
        <TextView
            android:id="@+id/roster"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/roster"
            android:textSize="16sp">
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#DCDCDC"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"

            >
            <com.inthecheesefactory.thecheeselibrary.widget.AdjustableImageButton
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:id="@+id/one"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/happiness"
                >
            </com.inthecheesefactory.thecheeselibrary.widget.AdjustableImageButton>

            <TextView
                android:id="@+id/tvOne"
                android:text="T.wanna"
                android:textSize="10sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
            </TextView>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>