<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    tools:context=".ClassDetailForStudent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        >
        <TextView
            android:id="@+id/Attendance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Attendance"
            android:textSize="20sp">
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp"
        >
        <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textSize="16sp">
        </TextView>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/happiness"
                >

            </ImageButton>
            <TextView
                android:id="@+id/tvOne"
                android:text="T.wanna"

                android:layout_width="match_parent"
                android:layout_height="match_parent" >
            </TextView>

        </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp"
        >
        <TextView
            android:id="@+id/tvSum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Summary"
            android:textSize="16sp">
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#DCDCDC"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            android:weightSum="2" >

            <TextView
                android:id="@+id/tvPresent"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/red"

                >
            </TextView>

            <TextView
                android:id="@+id/tvAbsent"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/blue"

                >
            </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2" >

            <TextView
                android:id="@+id/Present"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Present"
                >
            </TextView>

            <TextView
                android:id="@+id/Absent"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Absent"
                >
            </TextView>
        </LinearLayout>


        <LinearLayout
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/Atten"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Attendance"
                    android:textSize="12sp"
                    >
                </TextView>

                <TextView
                    android:id="@+id/tvAttendance"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:textSize="12sp"
                    android:background="@color/crimson"
                    >
                </TextView>
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/NumberOfRemin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/numberOf"
                    android:textSize="12sp"
                    >
                </TextView>

                <TextView
                    android:id="@+id/tvNumberOfRemin"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:textSize="12sp"
                    android:background="@color/deepskyblue"
                    >
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/Total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total"
                    android:textSize="12sp">
                </TextView>

                <TextView
                    android:id="@+id/tvTotal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/greenyellow"
                    android:gravity="center"

                    android:textSize="12sp">

                </TextView>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">


    </FrameLayout>


</LinearLayout>